# aiida-archive

./: .gitignore  .mypy.ini  README.md  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
aiida_archive/: __init__.py  cli.py  interface.py
aiida_archive/backends/: current.py
aiida_archive/backends/current/: __init__.py  export.py
tests/: conftest.py  test_current.py  test_nodes.py
tests/data/: current.graph1.aiida
tests/data/current.graph1/: data.json  metadata.json
