[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aiida_archive"
author = "Chris Sewell"
description-file = "README.md"
home-page = "https://github.com/aiidateam/aiida-archve"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "aiida"

requires-python=">=3.6"
requires=[
    "aiida-core~=1.4.0",
    "packaging",
    "importlib_metadata; python_version < '3.8'",
    "click"]

[tool.flit.scripts]
aiida-archive = "aiida_archive.cli:main"

[tool.flit.entrypoints."aiida.archive_format"]
current = "aiida_archive.backends.current:CurrentArchive"

[tool.flit.metadata.requires-extra]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
    "pgtest",
]

[tool.flit.sdist]
# include = []
exclude = [".github/", "tests/"]

[tool.isort]
known_first_party = ["aiida_archive", "tests"]
known_aiida = ["aiida"]
skip = ["venv"]

sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'AIIDA', 'FIRSTPARTY', 'LOCALFOLDER']
force_sort_within_sections = true

# Settings for Black compatibility
profile = "black"
